tests/machine/x/ocaml/two-sum.error
File "/tmp/TestOCamlCompiler_VMValid_Goldentwo-sum3983003295/001/two-sum.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Two-sum" is not a valid module name.
File "/tmp/TestOCamlCompiler_VMValid_Goldentwo-sum3983003295/001/two-sum.ml", line 32, characters 17-21:
32 |                 [i;j]
                      ^^^^
Error: This variant expression is expected to have type unit
         because it is in the result of a conditional with no else branch
       There is no constructor :: within type unit
